--- a/web1/src/app/report/vendor-credit/vendor-credit.component.html
+++ b/web1/src/app/report/vendor-credit/vendor-credit.component.html
@@ -147,8 +147,8 @@
                                                 </td>
                                                 <td>{{data.Remark}}</td>
                                                 <td>
-                                                    <span *ngIf="data.Is_Return === 0"> Credit Note</span>
-                                                    <span *ngIf="data.Is_Return === 1"> Return Credit Note</span>
+                                                    <span *ngIf="data.Is_Return === 0"> Direct Credit Note</span>
+                                                    <span *ngIf="data.Is_Return === 1"> Product Return Credit Note</span>
                                                 </td>
                                              
                                             </tr>
