--- a/web1/src/app/sale/bill-list/bill-list.component.html
+++ b/web1/src/app/sale/bill-list/bill-list.component.html
@@ -191,7 +191,7 @@
 <ng-template #content role="document" let-modal>
   <div class="modal-header" style="height: 50px; border-bottom: #ff651e 3px solid;">
     <h2 class="modal-title header pt-2" id="exampleModalLabel">Payment Detail</h2>
-    <button *ngIf="this.paymentHistoryList[0]?.PaymentMode == 'Payment Initiated'" type="button" class="ms-1 ms-md-5" mat-raised-button
+    <button *ngIf="this.paymentHistoryList[0]?.PaymentMode == 'Payment Initiated' && this.user.UserGroup === 'CompanyAdmin'" type="button" class="ms-1 ms-md-5" mat-raised-button
       color="primary" (click)="openModal12(content12)">Customer Debit (ReturnAmt)
     </button>
 
@@ -245,8 +245,10 @@
                     <td *ngIf="UpdateMode" style=" text-align: center;">
                       <input name="PaymentDate" type="date" [(ngModel)]="data.PaymentDate"
                         (blur)="updateCustomerPaymentDate(data)" #name="ngModel" [ngModelOptions]="{standalone: true}"
-                        name="data.PaymentDate{{i}}">
-
+                        name="data.PaymentDate{{i}}" *ngIf='this.user.UserGroup === "CompanyAdmin"'> 
+                         <span *ngIf='this.user.UserGroup !== "CompanyAdmin"'>
+                          {{dateFormat(data.PaymentDate)}}
+                        </span>
                     </td>
                     <td *ngIf="!UpdateMode" class="text-center">{{data.PaymentMode}} </td>
                     <td
